# aiassist

./: .env.example  .gitignore  AGENTS.md  compose.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.lock.txt  requirements.lock.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_foundation.py  0002_tasks.py  0003_scheduling_notifications.py  0004_habits.py  0005_voice_uploads.py  0006_captures.py  0007_search.py  0008_posts.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/cli/: dlq.py  main.py
backend/app/core/: config.py  errors.py  observability.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  captures.py  foundation.py  habits.py  notifications.py  posts.py  relations.py  scheduling.py  search.py  tasks.py  voice.py
backend/app/modules/assistant/: context.py  router.py  service.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/captures/: router.py  service.py  upload_service.py
backend/app/modules/habits/: recurrence.py  router.py  service.py
backend/app/modules/jobs/: router.py  schemas.py  service.py  sse.py
backend/app/modules/notifications/: reminder_service.py  router.py  service.py
backend/app/modules/posts/: rendering.py  router.py  service.py
backend/app/modules/search/: router.py  service.py
backend/app/modules/settings/: router.py  service.py
backend/app/modules/tasks/: calendar_router.py  calendar_service.py  recurrence.py  router.py  schedule_service.py  schemas.py  service.py  today.py
backend/app/modules/uploads/: router.py  service.py
backend/app/modules/voice/: router.py  service.py
backend/app/services/llm/: base.py  gateway.py  schemas.py
backend/app/services/llm/providers/: anthropic.py  ollama.py  (+1 more)
backend/app/services/mail/: base.py
backend/app/services/outbox/: publisher.py
backend/app/services/speech/: base.py  gateway.py
backend/app/services/storage/: base.py
backend/app/workers/: beat_schedule.py  celery_app.py
backend/app/workers/tasks/: blog.py  capture_ai.py  habits.py  images.py  maintenance.py  notifications.py  search.py  voice.py
backend/tests/: conftest.py
backend/tests/contract/: test_assistant_api.py  test_calendar_api.py  test_capture_analysis.py  test_captures_api.py  test_design_contracts.py  test_posts_api.py  test_schema_drift.py  test_settings_api.py  test_tasks_api.py  test_voice_schema.py
backend/tests/integration/: test_assistant.py  test_auth.py  test_blog_generation.py  test_broker_roundtrip.py  test_habits.py  test_image_pipeline.py  test_job_controls.py  test_job_events.py  test_migrations.py  test_outbox.py  test_queue_reliability.py  test_reminders.py  test_search.py  test_task_recurrence.py  test_today_tasks.py  test_upload_security.py  test_voice_pipeline.py
backend/tests/performance/: test_search_100k.py  test_text_save.py
backend/tests/reliability/: test_failure_matrix.py
backend/tests/security/: test_security.py
backend/tests/unit/: test_config.py  test_post_rendering.py  test_scheduling.py  test_smoke.py
(+140 files in other folders)
