[project]
name = "aiassist-backend"
version = "0.1.0"
description = "AI Assist personal life OS - modular monolith backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.139,<0.140",
    "uvicorn[standard]>=0.40,<0.41",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.12,<3",
    "email-validator>=2.2,<3",
    "sqlalchemy>=2.0.36,<2.1",
    "alembic>=1.18,<1.19",
    "psycopg[binary]>=3.2,<4",
    "celery>=5.6,<5.7",
    "kombu>=5.6,<5.7",
    "redis>=6.0,<7",
    "argon2-cffi>=25.1,<26",
    "pyjwt>=2.10,<3",
    "python-multipart>=0.0.20,<0.1",
    "python-dateutil>=2.9,<3",
    "pillow>=11.3,<13",
    "httpx>=0.28,<0.29",
    "markdown-it-py>=3.0,<5",
    "nh3>=0.2.18,<0.4",
    "structlog>=25.1,<26",
    "tzdata>=2025.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<2",
    "pytest-cov>=6.0,<8",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "types-python-dateutil>=2.9,<3",
    "jsonschema>=4.23,<5",
    "pyyaml>=6.0,<7",
    "freezegun>=1.5,<2",
    "piexif>=1.1,<2",
]

[project.scripts]
aiassist = "app.cli.main:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ---------------------------------------------------------------- lint / types

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TID", "RUF", "S"]
ignore = [
    "B008",   # FastAPI Depends() in defaults is the framework idiom
    "RUF001", # ambiguous unicode: user-facing Chinese copy is intentional
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "S107", "S311", "E501"]
"alembic/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
packages = ["app"]
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["celery.*", "kombu.*", "nh3.*", "markdown_it.*", "argon2.*"]
ignore_missing_imports = true

# --------------------------------------------------------------------- testing

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "unit: pure domain logic, no external services",
    "contract: REST/message/LLM schema conformance",
    "integration: requires real PostgreSQL (and sometimes Redis/RabbitMQ)",
    "security: authorization, isolation and input-abuse checks",
    "reliability: failure injection, retries, redelivery, outbox recovery",
    "performance: measured latency/throughput budgets",
    "broker: requires a real RabbitMQ broker and running workers",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/cli/*", "alembic/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
